add content 4 items

--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -65,6 +65,66 @@
             <div id="filter">
             </div>
             <div id="content" class="normal-deal-list cf">
+                <div class="item" id="yui_3_5_1_2_1350142560308_122">
+                    <div class="cover" id="yui_3_5_1_1_1350142560308_54">
+                        <a target="_blank" class="trade-geo" href="http://bj.meituan.com/deal/297298.html"><span class="geo-title">商圈：</span>亚运村、酒仙桥</a>
+                        <a href="http://bj.meituan.com/deal/297298.html" target="_blank" id="yui_3_5_1_1_1350142560308_53"><img width="312" height="189" src="http://p0.meituan.net/312.189/deal/201209/03/CGV.jpg" title="点击查看详情" alt="电影票1张，2D/3D可兑，可升级" id="yui_3_5_1_1_1350142560308_52"></a>
+                    </div>
+                    <h3>
+                        <a href="http://bj.meituan.com/deal/297298.html" target="_blank">【2店通用】CGV星星国际影城：电影票1张，2D/3D可兑，可升级</a>
+                    </h3>
+                    <p class="detail">
+                        <a href="http://bj.meituan.com/deal/297298.html" target="_blank" hidefocus="true" class="buy" rel="nofollow">去看看</a>
+                        <em class="price num">¥28</em>
+                        <span class="bypast">价值 <span class="num"><span>¥</span>100</span></span>
+                    </p>
+                    <p class="total"><strong class="num">29145</strong>人已购买</p>
+                </div>
+                <div class="item odd" id="yui_3_5_1_2_1350142560308_136">
+                    <div class="cover" id="yui_3_5_1_1_1350142560308_48">
+                        <a target="_blank" class="trade-geo" href="http://www.meituan.com/deal/862110.html" id="yui_3_5_1_1_1350142560308_47"><span class="geo-title">商圈：</span>东四、建国门/北京站、菜市口、广内大街</a>
+                        <a href="http://www.meituan.com/deal/862110.html" target="_blank" id="yui_3_5_1_1_1350142560308_50"><img width="312" height="189" src="http://p1.meituan.net/312.189/deal/201209/25/_0925114707.jpg" title="点击查看详情" alt="住宿1晚，美团券可叠加使用" id="yui_3_5_1_1_1350142560308_49"></a>
+                    </div>
+                    <h3>
+                        <a href="http://www.meituan.com/deal/862110.html" target="_blank">【北京】轻联富润酒店：住宿1晚，美团券可叠加使用</a>
+                    </h3>
+                    <p class="detail">
+                        <a href="http://www.meituan.com/deal/862110.html" target="_blank" hidefocus="true" class="buy" rel="nofollow">去看看</a>
+                        <em class="price num">¥128</em>
+                        <span class="bypast">价值 <span class="num"><span>¥</span>328</span></span>
+                    </p>
+                    <p class="total"><strong class="num">1457</strong>人已购买</p>
+                </div>
+                <div class="item" id="yui_3_5_1_2_1350142560308_122">
+                    <div class="cover" id="yui_3_5_1_1_1350142560308_54">
+                        <a target="_blank" class="trade-geo" href="http://bj.meituan.com/deal/297298.html"><span class="geo-title">商圈：</span>亚运村、酒仙桥</a>
+                        <a href="http://bj.meituan.com/deal/297298.html" target="_blank" id="yui_3_5_1_1_1350142560308_53"><img width="312" height="189" src="http://p0.meituan.net/312.189/deal/201209/03/CGV.jpg" title="点击查看详情" alt="电影票1张，2D/3D可兑，可升级" id="yui_3_5_1_1_1350142560308_52"></a>
+                    </div>
+                    <h3>
+                        <a href="http://bj.meituan.com/deal/297298.html" target="_blank">【2店通用】CGV星星国际影城：电影票1张，2D/3D可兑，可升级</a>
+                    </h3>
+                    <p class="detail">
+                        <a href="http://bj.meituan.com/deal/297298.html" target="_blank" hidefocus="true" class="buy" rel="nofollow">去看看</a>
+                        <em class="price num">¥28</em>
+                        <span class="bypast">价值 <span class="num"><span>¥</span>100</span></span>
+                    </p>
+                    <p class="total"><strong class="num">29145</strong>人已购买</p>
+                </div>
+                <div class="item odd" id="yui_3_5_1_2_1350142560308_136">
+                    <div class="cover" id="yui_3_5_1_1_1350142560308_48">
+                        <a target="_blank" class="trade-geo" href="http://www.meituan.com/deal/862110.html" id="yui_3_5_1_1_1350142560308_47"><span class="geo-title">商圈：</span>东四、建国门/北京站、菜市口、广内大街</a>
+                        <a href="http://www.meituan.com/deal/862110.html" target="_blank" id="yui_3_5_1_1_1350142560308_50"><img width="312" height="189" src="http://p1.meituan.net/312.189/deal/201209/25/_0925114707.jpg" title="点击查看详情" alt="住宿1晚，美团券可叠加使用" id="yui_3_5_1_1_1350142560308_49"></a>
+                    </div>
+                    <h3>
+                        <a href="http://www.meituan.com/deal/862110.html" target="_blank">【北京】轻联富润酒店：住宿1晚，美团券可叠加使用</a>
+                    </h3>
+                    <p class="detail">
+                        <a href="http://www.meituan.com/deal/862110.html" target="_blank" hidefocus="true" class="buy" rel="nofollow">去看看</a>
+                        <em class="price num">¥128</em>
+                        <span class="bypast">价值 <span class="num"><span>¥</span>328</span></span>
+                    </p>
+                    <p class="total"><strong class="num">1457</strong>人已购买</p>
+                </div>
             </div>
             <div id="sidebar">
             </div>
