--- a/app/views/products/index.erb
+++ b/app/views/products/index.erb
@@ -15,21 +15,21 @@
                                                    :height => "189",
                                                    :title => "点击查看详情",
                                                    :alt => product.image_title ),
-                                        { :controller => "product",
+                                        { :controller => "products",
                                           :action => "show",
                                           :id => product.id },
                                         { :target => "_blank" } %>
                         </div>
                         <h3>
                             <%= link_to "【" + product.district_name + "】" + product.image_title,
-                                        { :controller => "product",
+                                        { :controller => "products",
                                           :action => "show",
                                           :id => product.id },
                                         { :target => "_blank" } %>
                         </h3>
                         <p class="detail">
                             <%= link_to "去看看",
-                                        { :controller => "product",
+                                        { :controller => "products",
                                           :action => "show",
                                           :id => product.id },
                                         { :target => "_blank",
