add a words style

--- a/app/views/products/show.erb
+++ b/app/views/products/show.erb
@@ -42,6 +42,9 @@
                         <div class="main">
                             <h2 id="blk-deal-detail-720541">本单详情</h2>
                             <div class="blk detail">
+                                <style>
+                                .standard-bar { padding:3px 6px; color:#fff; border-radius:3px; font-weight:bold; }
+                                </style>
                                 <p class="standard-bar" style="background-color:#37adb1;">就知道你俩至少有一个被火锅俘虏了</p><p>在美团网，仅需88元即可享受最高价值252.4元的金源福城肥牛2-3人套餐，每人消费约29元哟！</p>
                                 <p class="standard-bar" style="background-color:#37adb1;">火锅公开课</p>
                                 <p>据江湖高人统计：在情侣吵架的理由中，因为吃火锅时选萝卜还是白菜而闹翻的比例高到令人咋舌。火锅也有色彩心理学，了解他/她的色彩，让爱情的小火锅沸腾。</p>
