--- a/app/views/products/show.erb
+++ b/app/views/products/show.erb
@@ -40,7 +40,7 @@
                 </div>
                 <div class="side">
                     <div class="deal-buy-cover-img">
-                        <%= image_tag "/assets/products/1.jpg" %>
+                        <%= image_tag @product.image_path %>
                     </div>
                 </div>
             </div>
